# mela-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASING.md  mela  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/mela_cli/: __main__.py  cli.py  discovery.py  formatters.py  store.py  utils.py
tests/: support.py  test_cli.py  test_discovery.py  test_store.py
